    Fixed an issue where column resizing using the resize bars was inconsistent between fixed and relative table widths #TINY-6001
    Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
    Fixed up and down keyboard navigation not working for inline `contenteditable="false"` elements #TINY-6226
    Fixed the `unlink` toolbar button not working when selecting multiple links #TINY-4867
    Fixed the `link` dialog not showing the "Text to display" field in some valid cases #TINY-5205
    Fixed the `DOMUtils.split()` API incorrectly removing some content #TINY-6294
    Fixed pressing escape not focusing the editor when using multiple toolbars #TINY-6230
    Fixed the `dirty` flag not being correctly set during an `AddUndo` event #TINY-4707
    Fixed `editor.selection.setCursorLocation` incorrectly placing the cursor outside `pre` elements in some circumstances #TINY-4058
    Fixed an exception being thrown when pressing enter inside pre elements while `br_in_pre` setting is false #TINY-4058
Version 5.4.2 (2020-08-17)
    Fixed the editor not resizing when resizing the browser window in fullscreen mode #TINY-3511
    Fixed clicking on notifications causing inline editors to hide #TINY-6058
    Fixed an issue where link URLs could not be deleted or edited in the link dialog in some cases #TINY-4706
    Fixed a regression where setting the `anchor_top` or `anchor_bottom` options to `false` was not working #TINY-6256
    Fixed the `anchor` plugin not supporting the `allow_html_in_named_anchor` option #TINY-6236
    Fixed an exception thrown when removing inline formats that contained additional styles or classes #TINY-6288
    Fixed an exception thrown when positioning the context toolbar on Internet Explorer 11 in some edge cases #TINY-6271
    Fixed inline formats not removed when more than one `removeformat` format rule existed #TINY-6216